--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,4 +1,5 @@
 ru:
-  message_add_to_issue_watchers:  При создании новой задачи автоматически добавлять в наблюдатели
+  message_add_to_created_issue_watchers:  При создании новой задачи автоматически добавлять в наблюдатели
   label_add_creator_to_issue_watchers: автора задачи
   label_add_assignee_to_watchers: сотрудника, кому назначена задача
+  message_add_to_changed_issue_watchers: При переадресации задачи автоматически добавлять в наблюдатели
